--- a/redfox.yaml
+++ b/redfox.yaml
@@ -4,7 +4,7 @@ proxies:
 
   - { name: "🦊 RedFox-2", type: socks5, server: server3.redfox.xo.je, port: 60088, username: "OnlyFox", password: "OnlyFox" }
 
-  - { name: "🦊 RedFox-3", type: socks5, server: server8.redfox.xo.je, port: 2580, username: "RedFox", password: "RedFox" }
+  - { name: "🦊 RedFox-3", type: socks5, server: server8.redfox.xo.je, port: 2580, username: "OnlyFox", password: "OnlyFox" }
 
   - { name: "🦊 RedFox-4", type: socks5, server: server9.redfox.xo.je, port: 6969, username: "RedFox", password: "RedFox" }
 
