--- a/redfox.yaml
+++ b/redfox.yaml
@@ -5,3 +5,63 @@ proxies:
   - { name: "🦊 RedFox-4", type: socks5, server: "103.108.60.35", port: 1088, username: "test", password: "test" }
   - { name: "🦊 RedFox-5", type: socks5, server: "103.84.252.101", port: 1088, username: "test", password: "test" }
   - { name: "🦊 RedFox-6", type: socks5, server: "103.197.48.198", port: 1088, username: "test", password: "test" }
+  - { name: "🦊 RedFox-7",  type: socks5, server: "cr1.ipbd.xyz",   port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-8",  type: socks5, server: "cr6.ipbd.xyz",   port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-9",  type: socks5, server: "cr7.ipbd.xyz",   port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-10", type: socks5, server: "cr8.ipbd.xyz",   port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-11", type: socks5, server: "cr12.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-12", type: socks5, server: "cr13.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-13", type: socks5, server: "cr14.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-14", type: socks5, server: "cr17.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-15", type: socks5, server: "cr18.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-16", type: socks5, server: "cr19.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-17", type: socks5, server: "cr20.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-18", type: socks5, server: "cr22.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-19", type: socks5, server: "cr23.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-20", type: socks5, server: "cr24.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-21", type: socks5, server: "cr27.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-22", type: socks5, server: "cr28.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-23", type: socks5, server: "cr29.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-24", type: socks5, server: "cr30.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-25", type: socks5, server: "cr31.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-26", type: socks5, server: "cr33.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-27", type: socks5, server: "cr35.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-28", type: socks5, server: "cr36.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-29", type: socks5, server: "cr37.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-30", type: socks5, server: "cr38.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-31", type: socks5, server: "cr39.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-32", type: socks5, server: "cr42.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-33", type: socks5, server: "cr43.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-34", type: socks5, server: "cr45.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-35", type: socks5, server: "cr46.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-36", type: socks5, server: "cr47.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-37", type: socks5, server: "cr48.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-38", type: socks5, server: "cr49.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-39", type: socks5, server: "cr51.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-40", type: socks5, server: "cr54.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-41", type: socks5, server: "cr56.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-42", type: socks5, server: "cr57.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-43", type: socks5, server: "cr60.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-44", type: socks5, server: "cr61.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-45", type: socks5, server: "cr64.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-46", type: socks5, server: "cr69.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-47", type: socks5, server: "cr71.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-48", type: socks5, server: "cr65.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-49", type: socks5, server: "cr72.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-50", type: socks5, server: "cr73.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-51", type: socks5, server: "cr77.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-52", type: socks5, server: "cr78.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-53", type: socks5, server: "cr79.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-54", type: socks5, server: "cr80.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-55", type: socks5, server: "cr82.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-56", type: socks5, server: "cr86.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-57", type: socks5, server: "cr87.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-58", type: socks5, server: "cr89.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-59", type: socks5, server: "cr91.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-60", type: socks5, server: "cr92.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-61", type: socks5, server: "cr94.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-62", type: socks5, server: "cr95.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-63", type: socks5, server: "cr97.ipbd.xyz",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-64", type: socks5, server: "cr100.ipbd.xyz", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-65", type: socks5, server: "cr101.ipbd.xyz", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-66", type: socks5, server: "cr104.ipbd.xyz", port: 10888, username: "test", password: "test123" }
