--- a/redfox.yaml
+++ b/redfox.yaml
@@ -184,3 +184,56 @@ proxies:
   - { name: "🦊 RedFox-183", type: socks5, server: "103.112.54.76", port: 10888, username: "test", password: "test123" }
   - { name: "🦊 RedFox-184", type: socks5, server: "103.112.54.99", port: 10888, username: "test", password: "test123" }
   - { name: "🦊 RedFox-185", type: socks5, server: "103.112.54.198", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-186", type: socks5, server: "103.112.55.40", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-187", type: socks5, server: "103.112.55.53", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-188", type: socks5, server: "103.112.55.55", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-189", type: socks5, server: "103.112.55.82", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-190", type: socks5, server: "103.112.55.99", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-191", type: socks5, server: "103.112.55.117", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-192", type: socks5, server: "103.112.55.141", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-193", type: socks5, server: "103.112.55.157", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-194", type: socks5, server: "103.112.55.168", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-195", type: socks5, server: "103.112.55.134", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-196", type: socks5, server: "103.120.200.166", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-197", type: socks5, server: "103.120.200.246", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-198", type: socks5, server: "103.120.201.18", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-199", type: socks5, server: "103.120.201.65", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-200", type: socks5, server: "103.120.201.67", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-201", type: socks5, server: "103.120.201.176", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-202", type: socks5, server: "103.120.202.56", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-203", type: socks5, server: "103.120.203.67", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-204", type: socks5, server: "103.120.203.197", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-205", type: socks5, server: "103.120.203.199", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-206", type: socks5, server: "103.122.142.15", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-207", type: socks5, server: "103.122.142.17", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-208", type: socks5, server: "103.122.142.46", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-209", type: socks5, server: "103.122.142.47", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-210", type: socks5, server: "103.122.142.81", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-211", type: socks5, server: "103.122.142.104", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-212", type: socks5, server: "103.122.142.122", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-213", type: socks5, server: "103.122.143.65", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-214", type: socks5, server: "103.122.143.86", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-215", type: socks5, server: "103.122.143.216", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-216", type: socks5, server: "103.147.162.7", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-217", type: socks5, server: "103.147.162.27", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-218", type: socks5, server: "103.147.162.33", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-219", type: socks5, server: "103.147.162.34", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-220", type: socks5, server: "103.147.162.100", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-221", type: socks5, server: "103.147.162.99", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-222", type: socks5, server: "103.147.162.101", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-223", type: socks5, server: "103.147.162.104", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-224", type: socks5, server: "103.147.162.110", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-225", type: socks5, server: "103.147.162.138", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-226", type: socks5, server: "103.147.162.156", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-227", type: socks5, server: "103.147.162.162", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-228", type: socks5, server: "103.147.162.187", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-229", type: socks5, server: "103.147.162.217", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-230", type: socks5, server: "103.147.162.241", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-231", type: socks5, server: "103.147.163.26", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-232", type: socks5, server: "103.147.163.44", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-233", type: socks5, server: "103.147.163.92", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-234", type: socks5, server: "103.147.163.98", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-235", type: socks5, server: "103.147.163.205", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-236", type: socks5, server: "103.149.142.81", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-237", type: socks5, server: "103.149.142.212", port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-238", type: socks5, server: "103.149.143.77", port: 10888, username: "test", password: "test123" }
